--- a/index.html
+++ b/index.html
@@ -5,42 +5,44 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="/css/styles.css" />
   <title>Document</title>
 </head>
 
 <body>
   <header>
     <a href="https://my.wayup.in" target="_blank">
-      <img src="/img/logo.jpg" alt="logo">
+      <img src="/img/logo.jpg" alt="logo" class="logo">
     </a>
   </header>
 
   <section>
-    <h1>Вступление H1</h1>
+    <h1 class="title">Вступление H1</h1>
 
-    <p>
+    <p class="paragraph-blue">
       Это текст моего первого домашнего задания
     </p>
-    <p>
-      Не верится, но мне уже удается писать свой первый код на HTML
+    <p class="block">
+      Не верится, но мне уже удается писать свой <span class="red-span">первый код на HTML</span>
     </p>
   </section>
 
   <section>
-    <h2>
+    <h2 class="h2-next">
       Что дальше? H2
     </h2>
     <p>
-      дальше я буду получать все больше опыта в разработке сайтов, чтобы достичь новых вершин!
+      Дальше я буду получать все больше опыта в разработке сайтов, чтобы достичь новых вершин!
       <a href="https:\\google.com" target="_blank">Почитать больше в Google</a>
     </p>
   </section>
 
   <section>
-    <h2>
+    <h2 class="h2-border">
       Что я буду иметь? H2
     </h2>
 
+    <div class="form">
     <p>
       Я смогу создавать вот такие замечательные формы:
     </p>
@@ -52,24 +54,34 @@
         Отправить форму
       </button>
     </form>
+  </div>
   </section>
 
   <div>
     <p>
-      А также, я научусь зоздавать списки:
+      А также, я научусь cоздавать списки:
     </p>
     <ul>
-      <li>С одним пунктом</li>
-      <li>С несколькими пунктами</li>
-      <li>И даже с тремя отдельніми пунктами</li>
+      <li class="li-border">С одним пунктом</li>
+      <li class="li-border">С несколькими пунктами</li>
+      <li class="li-border">И даже с тремя отдельными пунктами</li>
     </ul>
   </div>
 
   <section>
-    <h2>Отличное начало! H2</h2>
+    <h2 class="begin">Отличное начало! H2</h2>
     <a href="https://my.wayup.in/lesson/2907" target="_blank">Перейти на страницу первого занятия курса</a>
   </section>
 
+  <span>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+c
+  </span>
 </body>
 
 </html>
