--- a/index.html
+++ b/index.html
@@ -5,18 +5,16 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="stylesheet" href="css/styles.css" />
   <title>Document</title>
 </head>
 
 <body>
   <header>
     <a href="https://my.wayup.in" target="_blank">
-      <img src="/img/logo.jpg" alt="logo" class="logo">
+      <img src="img/logo.jpg" alt="logo" class="logo">
     </a>
-  </header>
 
-  <section>
     <h1 class="title">Вступление H1</h1>
 
     <p class="paragraph-blue">
@@ -25,7 +23,8 @@
     <p class="block">
       Не верится, но мне уже удается писать свой <span class="red-span">первый код на HTML</span>
     </p>
-  </section>
+  </header>
+
 
   <section>
     <h2 class="h2-next">
@@ -33,7 +32,7 @@
     </h2>
     <p>
       Дальше я буду получать все больше опыта в разработке сайтов, чтобы достичь новых вершин!
-      <a href="https:\\google.com" target="_blank">Почитать больше в Google</a>
+      <a href="https://google.com" target="_blank">Почитать больше в Google</a>
     </p>
   </section>
 
@@ -42,8 +41,8 @@
       Что я буду иметь? H2
     </h2>
 
-    <div class="form">
-    <p>
+
+    <p class="paragraph-form">
       Я смогу создавать вот такие замечательные формы:
     </p>
     <form action="#">
@@ -54,10 +53,9 @@
         Отправить форму
       </button>
     </form>
-  </div>
-  </section>
 
-  <div>
+
+
     <p>
       А также, я научусь cоздавать списки:
     </p>
@@ -66,22 +64,15 @@
       <li class="li-border">С несколькими пунктами</li>
       <li class="li-border">И даже с тремя отдельными пунктами</li>
     </ul>
-  </div>
 
-  <section>
-    <h2 class="begin">Отличное начало! H2</h2>
-    <a href="https://my.wayup.in/lesson/2907" target="_blank">Перейти на страницу первого занятия курса</a>
   </section>
 
-  <span>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-c
-  </span>
+
+  <footer>
+    <h2 class="begin">Отличное начало! H2</h2>
+    <a href="https://my.wayup.in/lesson/2907" target="_blank">Перейти на страницу первого занятия курса</a>
+  </footer>
+
 </body>
 
 </html>
